--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -56,6 +56,25 @@ jobs:
     - name: Run tests
       run: cargo test --features dev-tools --verbose --all-targets --workspace
 
+  cargo-audit:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Setup rust toolchain
+      uses: actions-rust-lang/setup-rust-toolchain@v1
+
+    - name: Setup cargo-audit
+      uses: baptiste0928/cargo-install@v3
+      with:
+        crate: cargo-audit
+
+    - name: Print cargo-audit version
+      run: cargo audit --version
+
+    - name: Run cargo-audit checks
+      run: cargo audit
+
   cargo-machete:
     runs-on: ubuntu-latest
     steps:
