--- a/crates/validator/Cargo.toml
+++ b/crates/validator/Cargo.toml
@@ -5,6 +5,7 @@
 name = "vector-search-validator"
 version.workspace = true
 edition.workspace = true
+license.workspace = true
 
 [dependencies]
 vector-search-validator-engine.workspace = true
