--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -56,7 +56,7 @@ jobs:
     - name: Run tests
       run: cargo test --features dev-tools --verbose --all-targets --workspace
 
-  cargo-audit:
+  cargo-deny:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -64,16 +64,16 @@ jobs:
     - name: Setup rust toolchain
       uses: actions-rust-lang/setup-rust-toolchain@v1
 
-    - name: Setup cargo-audit
+    - name: Setup cargo-deny
       uses: baptiste0928/cargo-install@v3
       with:
-        crate: cargo-audit
+        crate: cargo-deny
 
-    - name: Print cargo-audit version
-      run: cargo audit --version
+    - name: Print cargo-deny version
+      run: cargo deny --version
 
-    - name: Run cargo-audit checks
-      run: cargo audit
+    - name: Run cargo-deny licenses checks
+      run: cargo deny check
 
   cargo-machete:
     runs-on: ubuntu-latest
