--- a/crates/benchmark/Cargo.toml
+++ b/crates/benchmark/Cargo.toml
@@ -3,8 +3,9 @@
 
 [package]
 name = "vector-search-benchmark"
-version = "0.1.0"
+version.workspace = true
 edition.workspace = true
+license.workspace = true
 
 [dependencies]
 arrow-array.workspace = true
