--- a/crates/httpclient/Cargo.toml
+++ b/crates/httpclient/Cargo.toml
@@ -5,6 +5,7 @@
 name = "httpclient"
 version.workspace = true
 edition.workspace = true
+license.workspace = true
 
 [dependencies]
 anyhow.workspace = true
