--- a/crates/validator-engine/Cargo.toml
+++ b/crates/validator-engine/Cargo.toml
@@ -5,6 +5,7 @@
 name = "vector-search-validator-engine"
 version.workspace = true
 edition.workspace = true
+license.workspace = true
 
 [dependencies]
 clap.workspace = true
