--- a/crates/validator-scylla/Cargo.toml
+++ b/crates/validator-scylla/Cargo.toml
@@ -5,6 +5,7 @@
 name = "vector-search-validator-scylla"
 version.workspace = true
 edition.workspace = true
+license.workspace = true
 
 [dependencies]
 vector-search-validator-tests.workspace = true
