--- a/crates/validator-tests/Cargo.toml
+++ b/crates/validator-tests/Cargo.toml
@@ -5,6 +5,7 @@
 name = "vector-search-validator-tests"
 version.workspace = true
 edition.workspace = true
+license.workspace = true
 
 [dependencies]
 futures.workspace = true
