--- a/crates/validator-vector-store/Cargo.toml
+++ b/crates/validator-vector-store/Cargo.toml
@@ -5,6 +5,7 @@
 name = "vector-search-validator-vector-store"
 version.workspace = true
 edition.workspace = true
+license.workspace = true
 
 [dependencies]
 scylla.workspace = true
